--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
-    <string name="app_name">Glisten &amp; Glow Gifts</string>
+    <string name="app_name">Glisten &amp;            Glow Gifts</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Glisten &amp; Glow Gifts</string>
+    <string name="nav_header_subtitle">MA177@myscc.ca@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
@@ -19,7 +18,9 @@
     <string name="menu_faq">FAQ</string>
     <string name="menu_help">Help</string>
     <string name="menu_credits">Credits</string>
-    <string name="glisten_glow"><![CDATA[Glisten & Glow]]></string>
+    <string name="glisten"><![CDATA[Glisten]]></string>
+    <string name="and"><![CDATA[&]]></string>
+    <string name="glow">Glow</string>
     <string name="gifts">Gifts</string>
     <string name="discover_your_perfect_gift">Discover your perfect gift</string>
     <string name="search">Didn\'t find what are you looking for?</string>
