Navigate to the list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,10 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- Switch Preferences -->
+    <string name="view_mode_list">List View Mode</string>
+    <string name="view_mode_grid">Grid View Mode</string>
+
+
 </resources>
